21805, added the installation of krb5 tools to the image

--- a/images/cas/Dockerfile
+++ b/images/cas/Dockerfile
@@ -8,7 +8,7 @@ ENV CAS_SAML /etc/cas/saml
 ENV CAS_START /casstart
 
 # install sw and link it where necessary
-RUN yum install -y xmlstarlet openssl dos2unix which && \
+RUN yum install -y krb5-workstation krb5-libs krb5-auth-dialog xmlstarlet openssl dos2unix which && \
 		yum clean all
 
 # harden tomcat config and clean tomcat-bundled webapps
@@ -27,6 +27,9 @@ RUN cd $TOMCAT_BASE/conf && \
 
 # We just copy the war into the container here.
 COPY dropin/cas.war $TOMCAT_BASE/webapps
+
+# copy the configuration template
+COPY dropin/cas.TPL.properties $CAS_START/
 
 # finally, copy over the runscripts; this adds our runscripts to the Tomcat baseimage
 COPY runscripts "$RUNSCRIPTS_PATH/"
