21292, added support for default services (idm, cas management)

--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -29,7 +29,7 @@ cas.custom.frontend.iam=false
 cas.custom.frontend.title=IAM Centr\u00E1ln\u00ED login
 cas.custom.frontend.footer-text=
 cas.custom.frontend.footer-link=https://www.bcvsolutions.eu
-cas.custom.frontend.footer-linktext=BCV solutions
+cas.custom.frontend.footer-linktext=BCV solutions s.r.o.
 cas.custom.frontend.logolink=https://www.bcvsolutions.eu
 
 # AD SSO
