--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -4,10 +4,13 @@ cas.server.prefix=
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
+# only allow users to login by LDAP
 cas.authn.accept.users=
 
+# SERVICES
 cas.service-registry.json.location=file:/conf/cas/services
 
+# LDAP CONFIGURATION
 #cas.authn.ldap[0].type=
 #cas.authn.ldap[0].ldapUrl=
 #cas.authn.ldap[0].usessl=
@@ -18,19 +21,30 @@ cas.service-registry.json.location=file:/conf/cas/services
 #cas.authn.ldap[0].bindCredential=
 #cas.authn.ldap[0].dn-format=
 
+# IDM CLIENT SETTINGS
 cas.client.validator-type=CAS30
 # default is 1 for chrome and FF 15 is enough, but for IE we need 25. This setting is ok for now. Because the token has still 10 sec expiration.
 cas.ticket.st.number-of-uses=25
 # Logout redirect, otherwise CAS will not redirect you back to service from which you performed single logout
 cas.logout.follow-service-redirects=true
 
-
+# CUSTOM FRONTEND
 cas.custom.frontend.iam=false
 cas.custom.frontend.title=IAM Centr\u00E1ln\u00ED login
 cas.custom.frontend.footer-text=
 cas.custom.frontend.footer-link=https://www.bcvsolutions.eu
 cas.custom.frontend.footer-linktext=BCV solutions s.r.o.
 cas.custom.frontend.logolink=https://www.bcvsolutions.eu
+
+# TICKET ENCRYPTION CONFIG
+cas.webflow.crypto.signing.key=
+cas.webflow.crypto.encryption.key=
+cas.tgc.crypto.signing.key=
+cas.tgc.crypto.encryption.key=
+cas.authn.oauth.accessToken.crypto.signing.key=
+cas.authn.oauth.accessToken.crypto.encryption.key=
+cas.authn.oauth.crypto.signing.key=
+cas.authn.oauth.crypto.encryption.key=
 
 # AD SSO
 # TODO
