21805, added configuration for SPNEGO authentication

--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -1,25 +1,25 @@
-# HOSTNAME CONFIG
+### HOSTNAME CONFIG
 cas.server.name=
 cas.server.prefix=
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
-# only allow users to login by LDAP
+# do not allow logging in with static credentials
 cas.authn.accept.users=
 
-# SERVICES
+### SERVICES
 cas.service-registry.json.location=file:/conf/cas/services
 
-# LDAP CONFIGURATION
-#cas.authn.ldap[0].type=
-#cas.authn.ldap[0].ldapUrl=
-#cas.authn.ldap[0].usessl=
-#cas.authn.ldap[0].subtreeSearch=
-#cas.authn.ldap[0].baseDn=
-#cas.authn.ldap[0].searchFilter=
-#cas.authn.ldap[0].bindDn=
-#cas.authn.ldap[0].bindCredential=
-#cas.authn.ldap[0].dn-format=
+### LDAP CONFIGURATION
+cas.authn.ldap[0].type=
+cas.authn.ldap[0].ldapUrl=
+cas.authn.ldap[0].usessl=false
+cas.authn.ldap[0].subtreeSearch=
+cas.authn.ldap[0].baseDn=
+cas.authn.ldap[0].searchFilter=
+cas.authn.ldap[0].bindDn=
+cas.authn.ldap[0].bindCredential=
+cas.authn.ldap[0].dn-format=
 
 # IDM CLIENT SETTINGS
 cas.client.validator-type=CAS30
@@ -28,7 +28,7 @@ cas.ticket.st.number-of-uses=25
 # Logout redirect, otherwise CAS will not redirect you back to service from which you performed single logout
 cas.logout.follow-service-redirects=true
 
-# CUSTOM FRONTEND
+### CUSTOM FRONTEND
 cas.custom.frontend.iam=false
 cas.custom.frontend.title=IAM Centr\u00E1ln\u00ED login
 cas.custom.frontend.footer-text=
@@ -36,7 +36,7 @@ cas.custom.frontend.footer-link=https://www.bcvsolutions.eu
 cas.custom.frontend.footer-linktext=BCV solutions s.r.o.
 cas.custom.frontend.logolink=https://www.bcvsolutions.eu
 
-# TICKET ENCRYPTION CONFIG
+### TICKET ENCRYPTION CONFIG
 cas.webflow.crypto.signing.key=
 cas.webflow.crypto.encryption.key=
 cas.tgc.crypto.signing.key=
@@ -46,20 +46,42 @@ cas.authn.oauth.accessToken.crypto.encryption.key=
 cas.authn.oauth.crypto.signing.key=
 cas.authn.oauth.crypto.encryption.key=
 
-# AD SSO
-# TODO
+### AD SSO
 
 # needed to allow local sign-in
-#cas.authn.spnego.mixed-mode-authentication=
-#cas.authn.spnego.supported-browsers=
-#cas.authn.spnego.send401-on-authentication-failure=
-#cas.authn.spnego.ntlm-allowed=
-#cas.authn.spnego.principal-with-domain-name=
-#cas.authn.spnego.ntlm=
+#cas.authn.spnego.mixed-mode-authentication=true
+#cas.authn.spnego.supported-browsers=MSIE,Trident,Firefox,AppleWebKit,curl
+#cas.authn.spnego.send401-on-authentication-failure=true
+#cas.authn.spnego.ntlm-allowed=false
+#cas.authn.spnego.ntlm=false
+#cas.authn.spnego.name=AD_SPNEGO
 
-#cas.authn.spnego.system.kerberos-conf=
-#cas.authn.spnego.system.login-conf=
-##cas.authn.spnego.system.kerberos-realm=
-##cas.authn.spnego.system.kerberos-debug=true
-##cas.authn.spnego.system.use-subject-creds-only=false
-##cas.authn.spnego.system.kerberos-kdc=172.31.255.190
+#cas.authn.spnego.system.kerberos-conf=file:/etc/krb5.conf
+#cas.authn.spnego.system.login-conf=file:/etc/cas/config/login.conf
+#cas.authn.spnego.system.kerberos-realm=
+#cas.authn.spnego.system.kerberos-debug=false
+#cas.authn.spnego.system.use-subject-creds-only=true
+#cas.authn.spnego.system.kerberos-kdc=
+
+#cas.authn.spnego.host-name-client-action-strategy=hostnameSpnegoClientAction
+#cas.authn.spnego.alternative-remote-host-attribute=alternateRemoteHeader
+#cas.authn.spnego.ips-to-check-pattern=.+
+#cas.authn.spnego.host-name-pattern-string=.+
+#cas.webflow.autoconfigure=true
+#cas.authn.spnego.properties[0].cache-policy=600
+#cas.authn.spnego.properties[0].timeout=300000
+#cas.authn.spnego.properties[0].jcifs-service-principal=
+
+### ATTRIBUTE REPOSITORY CONFIGURATION
+
+cas.authn.attribute-repository.ldap[0].attributes.uid=uid
+cas.authn.attribute-repository.ldap[0].attributes.displayName=displayName
+cas.authn.attribute-repository.ldap[0].attributes.cn=commonName
+cas.authn.attribute-repository.ldap[0].attributes.memberOf=memberOf
+
+cas.authn.attribute-repository.ldap[0].ldapUrl=
+cas.authn.attribute-repository.ldap[0].useSsl=false
+cas.authn.attribute-repository.ldap[0].baseDn=
+cas.authn.attribute-repository.ldap[0].searchFilter=
+cas.authn.attribute-repository.ldap[0].bindDn=
+cas.authn.attribute-repository.ldap[0].bindCredential=
