--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -2,8 +2,6 @@
 cas.server.name=
 cas.server.prefix=
 
-logging.config=file:/etc/cas/config/log4j2.xml
-
 # do not allow logging in with static credentials
 cas.authn.accept.users=
 
@@ -20,8 +18,9 @@ cas.authn.ldap[0].searchFilter=
 cas.authn.ldap[0].bindDn=
 cas.authn.ldap[0].bindCredential=
 cas.authn.ldap[0].dn-format=
+cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,title,uid
 
-# IDM CLIENT SETTINGS
+### IDM CLIENT SETTINGS
 cas.client.validator-type=CAS30
 # default is 1 for chrome and FF 15 is enough, but for IE we need 25. This setting is ok for now. Because the token has still 10 sec expiration.
 cas.ticket.st.number-of-uses=25
@@ -47,11 +46,12 @@ cas.authn.oauth.crypto.signing.key=
 cas.authn.oauth.crypto.encryption.key=
 
 ### ATTRIBUTE REPOSITORY CONFIGURATION
-
+cas.authn.attribute-repository.ldap[0].attributes.mobile=phone
+cas.authn.attribute-repository.ldap[0].attributes.givenName=firstName
+cas.authn.attribute-repository.ldap[0].attributes.sn=lastName
+cas.authn.attribute-repository.ldap[0].attributes.mail=mail
+cas.authn.attribute-repository.ldap[0].attributes.title=title
 cas.authn.attribute-repository.ldap[0].attributes.uid=uid
-cas.authn.attribute-repository.ldap[0].attributes.displayName=displayName
-cas.authn.attribute-repository.ldap[0].attributes.cn=commonName
-cas.authn.attribute-repository.ldap[0].attributes.memberOf=memberOf
 
 cas.authn.attribute-repository.ldap[0].ldapUrl=
 cas.authn.attribute-repository.ldap[0].useSsl=false
