--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,10 +1,11 @@
 # More-elaborate example compose file for the CAS image.
-# In fact, not many parameters are mandatory - see README.md.
+# In fact, not many parameters are truly mandatory - see README.md.
+# With this configuration, CAS will start regardless of any other service.
 version: '3.2'
 
 services:
   appserver:
-    image: bcv-cas:6.2.7-r0
+    image: bcv-cas:6.2.8-r0
     container_name: cas
     ports:
       - 8009:8009
@@ -12,36 +13,56 @@ services:
     hostname: cas
     environment:
       - JAVA_XMS=768M
-      - JAVA_XMX=1536M
+      - JAVA_XMX=1024M
       - TZ=Europe/Prague
       - DOCKER_TOMCAT_ENABLE_AJP=
-#      - DOCKER_TOMCAT_DISABLE_ACCESS_LOG=
+      # - DOCKER_TOMCAT_DISABLE_ACCESS_LOG=
       - DOCKER_SECURE_SECRETS=yes
       - CAS_SERVER_NAME=
       - CAS_SERVER_PREFIX=
-      # - CAS_SERVICES_REGISTRY_JSON_LOCATION=/conf/cas/services
+      - CAS_SERVICES_REGISTRY_INIT_FROM_JSON=true
+      - CAS_SERVICES_REGISTRY_JSON_LOCATION=/etc/cas/config/cas_services
       # - CAS_LDAP_0_TYPE=DIRECT
-      # - CAS_LDAP_0_LDAP_URL=ldap://openldap:389
+      # - CAS_LDAP_0_LDAP_URL=ldap://directory-server:389
       # - CAS_LDAP_0_USE_SSL=false
       # - CAS_LDAP_0_SUBTREE_SEARCH=true
-      # - CAS_LDAP_0_BASE_DN=ou=users,dc=iam,dc=cz
-      # - CAS_LDAP_0_SEARCH_FILTER=cn={user}
-      # - CAS_LDAP_0_BIND_DN=cn=admin,dc=iam,dc=cz
-      # - CAS_LDAP_0_BIND_CREDENTIAL_PASSFILE=/run/secrets/ldap.pwfile
+      # - CAS_LDAP_0_BASE_DN=ou=users,dc=iamappliance
+      # - CAS_LDAP_0_SEARCH_FILTER=uid={user}
+      # - CAS_LDAP_0_BIND_DN=cn=cn=cas,dc=iamappliance
+      # - CAS_LDAP_0_BIND_CREDENTIAL_PASSFILE=/run/secrets/ldap_cas.yaml
       # - CAS_LDAP_0_DN_FORMAT=cn=%s,ou=users,dc=iam,dc=cz
-      - CAS_IDM_LOCATION=
-      - CAS_CONFIG=/etc/cas/config
+      # - CAS_IDM_LOCATION=
+      # - CAS_CONFIG=/etc/cas/config
+      # - CAS_CUSTOM_FRONTEND=true
+      # - CAS_CUSTOM_FRONTEND_TITLE=
+      # - CAS_CUSTOM_FRONTEND_FOOTER_TEXT=
+      # - CAS_CUSTOM_FRONTEND_FOOTER_LINK=
+      # - CAS_CUSTOM_FRONTEND_FOOTER_LINKTEXT=
+      # - CAS_CUSTOM_FRONTEND_LOGO_LINK=
+      # - CAS_SPNEGO_ENABLED=true
+      # - CAS_KERBEROS_REALM=
+      # - CAS_KERBEROS_DEBUG=false
+      # - CAS_KERBEROS_KDC=
+      # - CAS_KERBEROS_SERVICE_PRINCIPAL=
     volumes:
-# This is for binding folder with PEM certificates to import into truststore.
-# It comes from bcv-tomcat baseimage.
-#      - type: bind
-#        source: ./certs
-#        target: /opt/tomcat/truststore/certs
-#        read_only: true
-      - type: bind
-        source: ./ldap.pwfile
-        target: /run/secrets/ldap.pwfile
-        read_only: true
+      #   This is for binding folder with PEM certificates to import into truststore.
+      #   It comes from bcv-tomcat baseimage.
+      # - type: bind
+      #   source: ./certs
+      #   target: /opt/tomcat/truststore/certs
+      #   read_only: true
+      # This file contains the password for the user CAS uses to read LDAP.
+      # The password must be a string surrounded by quotation marks ("password").
+      # - type: bind
+      #   source: ./ldap_cas.yaml
+      #   target: run/secrets/ldap_cas.yaml
+      #   read_only: true
+      # This is for the files related to SPNEGO authentication, i. e., the keytab, 
+      # krb5.conf, and login.conf.  
+      # - type: bind
+      #   source: /data/volumes/cas/spnego
+      #   target: /casstart/spnego
+      #   read_only: true
       - 'cas_services:/conf/cas/services'
 volumes:
   cas_services:
