22060, making one SPNEGO config property always active to allow non-SPNEGO authentication

--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -20,6 +20,8 @@ cas.authn.ldap[0].bindCredential=
 cas.authn.ldap[0].dn-format=
 cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,title,uid
 
+cas.authn.spnego.mixed-mode-authentication=true
+
 ### IDM CLIENT SETTINGS
 cas.client.validator-type=CAS30
 # default is 1 for chrome and FF 15 is enough, but for IE we need 25. This setting is ok for now. Because the token has still 10 sec expiration.
