--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -1,6 +1,6 @@
 ### HOSTNAME CONFIG
 cas.server.name=
-cas.server.prefix=
+cas.server.prefix=${cas.server.name}/cas
 
 # do not allow logging in with static credentials
 cas.authn.accept.users=
@@ -9,16 +9,16 @@ cas.authn.accept.users=
 cas.service-registry.json.location=file:/conf/cas/services
 
 ### LDAP CONFIGURATION
-cas.authn.ldap[0].type=
-cas.authn.ldap[0].ldapUrl=
-cas.authn.ldap[0].usessl=false
-cas.authn.ldap[0].subtreeSearch=
-cas.authn.ldap[0].baseDn=
-cas.authn.ldap[0].searchFilter=
-cas.authn.ldap[0].bindDn=
-cas.authn.ldap[0].bindCredential=
-cas.authn.ldap[0].dn-format=
-cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,title,uid
+#cas.authn.ldap[0].type=
+#cas.authn.ldap[0].ldapUrl=
+#cas.authn.ldap[0].usessl=false
+#cas.authn.ldap[0].subtreeSearch=
+#cas.authn.ldap[0].baseDn=
+#cas.authn.ldap[0].searchFilter=
+#cas.authn.ldap[0].bindDn=
+#cas.authn.ldap[0].bindCredential=
+#cas.authn.ldap[0].dn-format=
+cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,uid
 
 cas.authn.spnego.mixed-mode-authentication=true
 
@@ -48,11 +48,10 @@ cas.authn.oauth.crypto.signing.key=
 cas.authn.oauth.crypto.encryption.key=
 
 ### ATTRIBUTE REPOSITORY CONFIGURATION
-cas.authn.attribute-repository.ldap[0].attributes.mobile=phone
-cas.authn.attribute-repository.ldap[0].attributes.givenName=firstName
-cas.authn.attribute-repository.ldap[0].attributes.sn=lastName
+cas.authn.attribute-repository.ldap[0].attributes.mobile=mobile
+cas.authn.attribute-repository.ldap[0].attributes.givenName=givenName
+cas.authn.attribute-repository.ldap[0].attributes.sn=sn
 cas.authn.attribute-repository.ldap[0].attributes.mail=mail
-cas.authn.attribute-repository.ldap[0].attributes.title=title
 cas.authn.attribute-repository.ldap[0].attributes.uid=uid
 
 cas.authn.attribute-repository.ldap[0].ldapUrl=
