--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -18,7 +18,7 @@ cas.service-registry.json.location=file:/conf/cas/services
 #cas.authn.ldap[0].bindDn=
 #cas.authn.ldap[0].bindCredential=
 #cas.authn.ldap[0].dn-format=
-cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,uid
+#cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,uid,inetUserStatus,cn
 
 cas.authn.spnego.mixed-mode-authentication=true
 
@@ -54,9 +54,9 @@ cas.authn.attribute-repository.ldap[0].attributes.sn=sn
 cas.authn.attribute-repository.ldap[0].attributes.mail=mail
 cas.authn.attribute-repository.ldap[0].attributes.uid=uid
 
-cas.authn.attribute-repository.ldap[0].ldapUrl=
-cas.authn.attribute-repository.ldap[0].useSsl=false
-cas.authn.attribute-repository.ldap[0].baseDn=
-cas.authn.attribute-repository.ldap[0].searchFilter=
-cas.authn.attribute-repository.ldap[0].bindDn=
-cas.authn.attribute-repository.ldap[0].bindCredential=
+#cas.authn.attribute-repository.ldap[0].ldapUrl=
+#cas.authn.attribute-repository.ldap[0].useSsl=false
+#cas.authn.attribute-repository.ldap[0].baseDn=
+#cas.authn.attribute-repository.ldap[0].searchFilter=
+#cas.authn.attribute-repository.ldap[0].bindDn=
+#cas.authn.attribute-repository.ldap[0].bindCredential=
