made changes to configuration to handle new LDAP settings and prevent inactive users from logging in

--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -14,11 +14,10 @@ cas.service-registry.json.location=file:/conf/cas/services
 #cas.authn.ldap[0].usessl=false
 #cas.authn.ldap[0].subtreeSearch=
 #cas.authn.ldap[0].baseDn=
-#cas.authn.ldap[0].searchFilter=
+#cas.authn.ldap[0].search-filter=
 #cas.authn.ldap[0].bindDn=
 #cas.authn.ldap[0].bindCredential=
-#cas.authn.ldap[0].dn-format=
-#cas.authn.ldap[0].principalAttributeList=mobile,givenName,mail,sn,uid,inetUserStatus,cn
+#cas.authn.ldap[0].principalAttributeList=
 
 cas.authn.spnego.mixed-mode-authentication=true
 
@@ -57,6 +56,6 @@ cas.authn.attribute-repository.ldap[0].attributes.uid=uid
 #cas.authn.attribute-repository.ldap[0].ldapUrl=
 #cas.authn.attribute-repository.ldap[0].useSsl=false
 #cas.authn.attribute-repository.ldap[0].baseDn=
-#cas.authn.attribute-repository.ldap[0].searchFilter=
+#cas.authn.attribute-repository.ldap[0].search-filter=
 #cas.authn.attribute-repository.ldap[0].bindDn=
 #cas.authn.attribute-repository.ldap[0].bindCredential=
