--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -27,10 +27,9 @@ services:
       # - CAS_LDAP_0_USE_SSL=false
       # - CAS_LDAP_0_SUBTREE_SEARCH=true
       # - CAS_LDAP_0_BASE_DN=ou=users,dc=iamappliance
-      # - CAS_LDAP_0_SEARCH_FILTER=(&(uid={user})(inetUserStatus=active))
+      # - CAS_LDAP_0_SEARCH_FILTER=(\&(uid={user})(iamUserStatus=active))
       # - CAS_LDAP_0_BIND_DN=cn=cn=cas,dc=iamappliance
       # - CAS_LDAP_0_BIND_CREDENTIAL_PASSFILE=/run/secrets/ldap_cas.yaml
-      # - CAS_LDAP_0_DN_FORMAT=uid=%s,ou=users,dc=iamappliance
       # - CAS_CONFIG=/etc/cas/config
       # - CAS_CUSTOM_FRONTEND=true
       # - CAS_CUSTOM_FRONTEND_TITLE=
