--- a/compose/docker-compose-cas.yml
+++ b/compose/docker-compose-cas.yml
@@ -37,6 +37,7 @@ services:
       # - CAS_CUSTOM_FRONTEND_FOOTER_LINK=
       # - CAS_CUSTOM_FRONTEND_FOOTER_LINKTEXT=
       # - CAS_CUSTOM_FRONTEND_LOGO_LINK=
+      # - CAS_CUSTOM_FRONTEND_PASSWORDRESET_DISPLAY=
       # - CAS_SPNEGO_ENABLED=true
       # - CAS_KERBEROS_REALM=
       # - CAS_KERBEROS_DEBUG=false
