--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -23,10 +23,18 @@ cas.authn.spnego.mixed-mode-authentication=true
 
 ### IDM CLIENT SETTINGS
 cas.client.validator-type=CAS30
-# default is 1 for chrome and FF 15 is enough, but for IE we need 25. This setting is ok for now. Because the token has still 10 sec expiration.
-cas.ticket.st.number-of-uses=25
 # Logout redirect, otherwise CAS will not redirect you back to service from which you performed single logout
 cas.logout.follow-service-redirects=true
+
+### TICKET TIMEOUT SETTINGS
+# idle TGT timeout, default 8 hours
+cas.ticket.tgt.timeout.max-time-to-live-in-seconds=28800
+# hard TGT timeout, default 12 hours
+cas.ticket.tgt.hard-timeout.time-to-kill-in-seconds=43200
+# default is 1 for chrome and FF 15 is enough, but for IE we need 25
+cas.ticket.st.number-of-uses=25
+# hard ST timeout, default 15 minutes
+cas.ticket.st.time-to-kill-in-seconds=900
 
 ### CUSTOM FRONTEND
 cas.custom.frontend.iam=false
