22366-conf-passwordReset-link

--- a/compose/docker-compose-cas.yml
+++ b/compose/docker-compose-cas.yml
@@ -38,6 +38,7 @@ services:
       # - CAS_CUSTOM_FRONTEND_FOOTER_LINKTEXT=
       # - CAS_CUSTOM_FRONTEND_LOGO_LINK=
       # - CAS_CUSTOM_FRONTEND_PASSWORDRESET_DISPLAY=
+      # - CAS_CUSTOM_FRONTEND_PASSWORDRESET_LINK=
       # - CAS_SPNEGO_ENABLED=true
       # - CAS_KERBEROS_REALM=
       # - CAS_KERBEROS_DEBUG=false
