--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -44,6 +44,7 @@ cas.custom.frontend.footer-link=https://www.bcvsolutions.eu
 cas.custom.frontend.footer-linktext=BCV solutions s.r.o.
 cas.custom.frontend.logolink=https://www.bcvsolutions.eu
 cas.custom.frontend.passwordReset.display=false
+cas.custom.frontend.passwordReset.link=~/passwordReset
 
 ### TICKET ENCRYPTION CONFIG
 cas.webflow.crypto.signing.key=
