22525, added the option to set logging level to DEBUG

--- a/images/cas/dropin/cas.TPL.properties
+++ b/images/cas/dropin/cas.TPL.properties
@@ -5,6 +5,9 @@ cas.server.prefix=${cas.server.name}/cas
 # do not allow logging in with static credentials
 cas.authn.accept.users=
 
+### CAS LOGGING LEVEL
+logging.level.org.apereo.cas=INFO
+
 ### SERVICES
 cas.service-registry.json.location=file:/conf/cas/services
 
